Update: append some more annotation

--- a/host-server/public/201304/functions-that-are-not-source-element.html
+++ b/host-server/public/201304/functions-that-are-not-source-element.html
@@ -45,6 +45,7 @@
 	})();
 	/*
 	As a result, never write "function declaration" not directly in script or any function body (although they are not function declaratoin in fact), otherwise your codes will behave differently according to JavaScript engines.
+	If you want to create a function conditionaly, use function expression to create, and assign this function object to a variable.
 	*/
 	</script>
 </body>
