Assgin null & void

--- a/host-server/public/201312/assign-undefined.html
+++ b/host-server/public/201312/assign-undefined.html
@@ -13,6 +13,24 @@
 
     var undefined = 123;
     console.log(undefined);
+
+    // Syntax error!
+    // (function(){
+    //     var null = 123;
+    //     console.log(null);
+    // })();
+    // 
+    // var null = 123;
+    // console.log(null);
+
+    // Syntax error!
+    // (function(){
+    //     var void = 321;
+    //     console.log(void);
+    // })();
+    // 
+    // var void = 321;
+    // console.log(void);
     </script>
 </body>
 </html>
